# lifecell_tariffs_bot

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
bot/: __main__.py  bot.py  logics.py  messages.py
bot/data_provider/: __init__.py
bot/formatting/: format_general_overview.py  format_list_item.py
bot/formatting/utils/: format_constant_or_range.py
bot/handlers/: __init__.py  about_us.py  bot.py  start.py  tariffs_list.py
config/: Config.py  __init__.py  example.json
configs/: dev.json  example.json
data/: __init__.py
data/access/: DataProvider.py
data/db/: __init__.py
data/db/models/: DetailedInformation.py  GeneralTariffInfo.py  Tariffs.py
data/parser/: __main__.py
data/parser/pages/: parse_detailed_info.py  parse_tariff_overview.py
data/parser/utils/: redirect_and_create_soup.py  setup_driver.py
examples/: __main__.py  bot_commit1.py  config.py
examples/commit_2/: bot_commit2.py
examples/commit_2/src/: config.py
examples/src/: handler.py  question_logics.py
parser/: __main__.py
parser/pages/: parse_detailed_info.py  parse_tariff_overview.py
parser/schema/: DetailedInformation.py  GeneralOverview.py  Tariffs.py  __init__.py
parser/utils/: redirect_and_create_soup.py  setup_driver.py
shared/config/: Config.py  __init__.py
shared/logger/: __init__.py
